Bug 523562 - ksystemstats inadvertent crashes
Summary: ksystemstats inadvertent crashes
Status: RESOLVED FIXED
Alias: None
Product: ksystemstats
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 6.7.2
Platform: Fedora RPMs Linux
: HI crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-07-27 09:38 UTC by hgul2112
Modified: 2026-07-30 21:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.4
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/457430/events/078aa4aff4e04295a85936c4798425bd/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hgul2112 2026-07-27 09:38:01 UTC
Application: ksystemstats (6.7.2)

ApplicationNotResponding [ANR]: false
Qt Version: 6.11.1
Frameworks Version: 6.28.0
Operating System: Linux 7.1.3-200.fc44.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 44 (KDE Plasma Desktop Edition)"
DrKonqi: 6.7.2 [CoredumpBackend]

-- Information about the crash:
Happens completely inadvertenly at random times.
Unsure what exactly is causing the crash.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: ksystemstats (ksystemstats), signal: Segmentation fault

Downloading separate debug info for /usr/bin/ksystemstats...
Downloading 1.34 M separate debug info for /home/22pgulh/.cache/debuginfod_client/5f4ad29edbc6f6e75d17975aca861a6283d0003f/debuginfo...
[New LWP 2186]
[New LWP 2196]
Downloading 6.75 M separate debug info for /lib64/libc.so.6...
Downloading separate debug info for system-supplied DSO at 0x7f860bd7a000...
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/usr/bin/ksystemstats'.
Program terminated with signal SIGSEGV, Segmentation fault.
Downloading source file /usr/src/debug/glibc-2.43-7.fc44.x86_64/nptl/pthread_kill.c...
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
44	      return INTERNAL_SYSCALL_ERROR_P (ret) ? INTERNAL_SYSCALL_ERRNO (ret) : 0;
[Current thread is 1 (Thread 0x7f8609faaac0 (LWP 2186))]
Using gdb.Corefile to resolve modules.
GDBCoreImage: No build id found in mapped file /usr/lib/locale/locale-archive
GDBCoreImage: No build id found in mapped file /usr/share/locale/en_GB/LC_MESSAGES/processcore.mo
GDBCoreImage: No build id found in mapped file /usr/lib64/gconv/gconv-modules.cache
GDBCoreImage: No build id found in mapped file /usr/share/locale/en_GB/LC_MESSAGES/ksystemstats_plugins.mo
GDBCoreImage: No build id found in mapped file /usr/share/locale/en_GB/LC_MESSAGES/ksysguard_systemstats.mo
GDBCoreImage: No build id found in mapped file /usr/share/locale/en_GB/LC_MESSAGES/kauth6_qt.qm
GDBCoreImage: No build id found in mapped file /usr/share/locale/en_GB/LC_MESSAGES/solid6_qt.qm
GDBCoreImage: No build id found in mapped file /usr/share/qt6/translations/qt_en.qm
GDBCoreImage: No build id found in mapped file /usr/share/locale/en_GB/LC_MESSAGES/kcoreaddons6_qt.qm
GDBCoreImage: No build id found in mapped file /usr/share/locale/en/LC_MESSAGES/kcoreaddons6_qt.qm
add symbol table from file "/lib64/libc.so.6"
Downloading 1.57 M separate debug info for /lib64/libKF6Crash.so.6...
add symbol table from file "/lib64/libKF6Crash.so.6"
Downloading 3.59 M separate debug info for /lib64/libKSysGuardSystemStats.so.2...
Downloading 2.45 M separate debug info for /home/22pgulh/.cache/debuginfod_client/286fabe2ac4710e33ae228e103d9e71bcdbe83b2/debuginfo...
add symbol table from file "/lib64/libKSysGuardSystemStats.so.2"
Downloading 94.98 M separate debug info for /lib64/libQt6Core.so.6...
Downloading 27.34 M separate debug info for /home/22pgulh/.cache/debuginfod_client/224e4c3e7b152d40184b9dcab80ca362f85f24ca/debuginfo...
add symbol table from file "/lib64/libQt6Core.so.6"
Downloading 2.51 M separate debug info for /usr/lib64/qt6/plugins/ksystemstats/ksystemstats_plugin_network.so...
add symbol table from file "/usr/lib64/qt6/plugins/ksystemstats/ksystemstats_plugin_network.so"
Downloading 36.93 M separate debug info for /lib64/libKF6NetworkManagerQt.so.6...
Downloading 667.06 K separate debug info for /home/22pgulh/.cache/debuginfod_client/42bfe417f141df7f6ffdcaa1c09cf0a1b79072aa/debuginfo...
add symbol table from file "/lib64/libKF6NetworkManagerQt.so.6"
Downloading 19.19 M separate debug info for /lib64/libQt6DBus.so.6...
add symbol table from file "/lib64/libQt6DBus.so.6"
Downloading 3.67 M separate debug info for /lib64/libglib-2.0.so.0...
Downloading 1.20 M separate debug info for /home/22pgulh/.cache/debuginfod_client/6dae940c30065a166a12ab9ff52140e4d699e104/debuginfo...
add symbol table from file "/lib64/libglib-2.0.so.0"
add symbol table from file "/usr/bin/ksystemstats"
Downloading 1.24 K source file /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/src/main.cpp...
Downloading 113.71 K source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp...
Downloading 13.21 K source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/global/qflags.h...
Downloading source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp...
Downloading 191.62 K source file /usr/src/debug/glib2-2.88.2-1.fc44.x86_64/redhat-linux-build/../glib/gmain.c...
Downloading 210.18 K source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp...
Downloading 101.65 K source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/dbus/qdbusintegrator.cpp...
Downloading source file /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/redhat-linux-build/src/KF6NetworkManagerQt_autogen/include/moc_wirelessdevice_p.cpp...
Downloading source file /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/redhat-linux-build/src/KF6NetworkManagerQt_autogen/include/moc_device_p.cpp...
Downloading 21.29 K source file /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/src/device.cpp...
Downloading source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h...
Downloading 12.53 K source file /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/plugins/network/NetworkManagerBackend.cpp...
Downloading source file /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/redhat-linux-build/plugins/network/ksystemstats_plugin_network_autogen/include/moc_NetworkManagerBackend.cpp...
Downloading source file /usr/include/qt6/QtCore/qobjectdefs.h...
Downloading source file /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/redhat-linux-build/plugins/network/ksystemstats_plugin_network_autogen/include/moc_NetworkBackend.cpp...
Downloading source file /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/SensorContainer.cpp...
Downloading 4.63 K source file /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/redhat-linux-build/systemstats/SystemStats_autogen/EWIEGA46WW/moc_SensorContainer.cpp...
Downloading 31.40 K source file /usr/include/qt6/QtCore/qobjectdefs.h...
Downloading 9.21 K source file /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/AggregateSensor.cpp...
Downloading source file /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/SensorObject.cpp...
Downloading 74.58 K source file /usr/include/qt6/QtCore/qstring.h...
Downloading 15.98 K source file /usr/include/qt6/QtCore/qarraydatapointer.h...
Downloading 2.48 K source file /usr/src/debug/glibc-2.43-7.fc44.x86_64/misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S...
Downloading source file /usr/src/debug/glibc-2.43-7.fc44.x86_64/nptl/pthread_create.c...
Downloading source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/thread/qthread_unix.cpp...
Downloading 10.11 K source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/dbus/qdbusconnectionmanager.cpp...
Downloading source file /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/thread/qthread.cpp...
Downloading source file /usr/src/debug/glibc-2.43-7.fc44.x86_64/io/../sysdeps/unix/sysv/linux/ppoll.c...
Downloading 4.24 K source file /usr/src/debug/glibc-2.43-7.fc44.x86_64/nptl/cancellation.c...
Downloading source file /usr/src/debug/glibc-2.43-7.fc44.x86_64/nptl/../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S...
[Current thread is 2 (Thread 0x7f85f89ff6c0 (LWP 2196))]

Thread 2 (Thread 0x7f85f89ff6c0 (LWP 2196)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f860ac7652c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=<optimized out>, a6=<optimized out>, nr=271) at cancellation.c:49
#2  0x00007f860ac76574 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=<optimized out>, a6=<optimized out>, nr=271) at cancellation.c:75
#3  0x00007f860acf0426 in __GI_ppoll (fds=fds@entry=0x7f85f00013c0, nfds=nfds@entry=3, timeout=<optimized out>, timeout@entry=0x0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f8609ae6125 in ppoll (__fds=0x7f85f00013c0, __nfds=3, __timeout=0x0, __ss=0x0) at /usr/include/bits/poll2.h:101
#5  g_main_context_poll_unlocked (priority=<optimized out>, context=0x7f85f0000ca0, timeout_usec=<optimized out>, fds=0x7f85f00013c0, n_fds=3) at ../glib/gmain.c:4837
#6  g_main_context_iterate_unlocked (context=context@entry=0x7f85f0000ca0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4511
#7  0x00007f8609ae61e3 in g_main_context_iteration (context=0x7f85f0000ca0, may_block=1) at ../glib/gmain.c:4582
#8  0x00007f860b669a9d in QEventDispatcherGlib::processEvents (this=0x7f85f0000880, flags=...) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:402
#9  0x00007f860b31d57b in QEventLoop::exec (this=this@entry=0x7f85f89fe9f0, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/global/qflags.h:78
#10 0x00007f860b450e0a in QThread::exec (this=this@entry=0x7f860bc17dc0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/thread/qthread.cpp:672
#11 0x00007f860bb56704 in QDBusConnectionManager::run (this=0x7f860bc17dc0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/dbus/qdbusconnectionmanager.cpp:145
#12 0x00007f860b50ce8f in QThreadPrivate::start (arg=0x7f860bc17dc0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/thread/qthread_unix.cpp:466
#13 0x00007f860ac79c19 in start_thread (arg=<optimized out>) at pthread_create.c:454
#14 0x00007f860acfd5cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 1 (Thread 0x7f8609faaac0 (LWP 2186)):
[KCrash Handler]
#4  0x00007f860bd220cb in QArrayDataPointer<char16_t>::QArrayDataPointer (this=<optimized out>, other=..., this=<optimized out>, other=...) at /usr/include/qt6/QtCore/qarraydatapointer.h:36
#5  QString::QString (this=<optimized out>, other=..., this=<optimized out>, other=...) at /usr/include/qt6/QtCore/qstring.h:1391
#6  KSysGuard::SensorObject::id (this=this@entry=0x55e6d8cb68f0) at /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/SensorObject.cpp:51
#7  0x00007f860bd27632 in KSysGuard::AggregateSensor::updateSensors (this=0x55e6d8c4d4d0) at /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/AggregateSensor.cpp:291
#8  KSysGuard::AggregateSensor::updateSensors (this=0x55e6d8c4d4d0) at /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/AggregateSensor.cpp:263
#9  0x00007f860b384eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x55e6d8c4d4d0, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462
#10 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=argv@entry=0x7fff2b218c30) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4372
#11 0x00007f860b37ab47 in QMetaObject::activate (sender=sender@entry=0x55e6d8c4d1d0, m=m@entry=0x7f860bd45120, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff2b218c30) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4432
#12 0x00007f860bd1d6a7 in QMetaObject::activate<void, KSysGuard::SensorObject*> (sender=0x55e6d8c4d1d0, mo=0x7f860bd45120, local_signal_index=0, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs.h:320
#13 KSysGuard::SensorContainer::objectAdded (this=this@entry=0x55e6d8c4d1d0, _t1=<optimized out>, _t1@entry=0x55e6d8c1e4f0) at /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/redhat-linux-build/systemstats/SystemStats_autogen/EWIEGA46WW/moc_SensorContainer.cpp:128
#14 0x00007f860bd238a3 in KSysGuard::SensorContainer::addObject (this=0x55e6d8c4d1d0, object=0x55e6d8c1e4f0) at /usr/src/debug/libksysguard-6.7.2-1.fc44.x86_64/systemstats/SensorContainer.cpp:66
#15 0x00007f860b384eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x55e6d8c4d180, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462
#16 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=argv@entry=0x7fff2b218f10) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4372
#17 0x00007f860b37ab47 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f85f71694a0 <NetworkBackend::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff2b218f10) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4432
#18 0x00007f85f7150f37 in QMetaObject::activate<void, NetworkDevice*> (sender=<optimized out>, mo=0x7f85f71694a0 <NetworkBackend::staticMetaObject>, local_signal_index=0, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs.h:320
#19 NetworkBackend::deviceAdded (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/redhat-linux-build/plugins/network/ksystemstats_plugin_network_autogen/include/moc_NetworkBackend.cpp:128
#20 0x00007f860b384eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x55e6d8c515b0, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462
#21 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=argv@entry=0x7fff2b2190f0) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4372
#22 0x00007f860b37ab47 in QMetaObject::activate (sender=sender@entry=0x55e6d8c1e4f0, m=m@entry=0x7f85f7168fc0 <NetworkManagerDevice::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff2b2190f0) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4432
#23 0x00007f85f7153493 in QMetaObject::activate<void, NetworkManagerDevice*> (sender=0x55e6d8c1e4f0, mo=0x7f85f7168fc0 <NetworkManagerDevice::staticMetaObject>, local_signal_index=0, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs.h:320
#24 NetworkManagerDevice::connected (this=0x55e6d8c1e4f0, _t1=0x55e6d8c1e4f0) at /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/redhat-linux-build/plugins/network/ksystemstats_plugin_network_autogen/include/moc_NetworkManagerBackend.cpp:147
#25 NetworkManagerDevice::update (this=0x55e6d8c1e4f0) at /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/plugins/network/NetworkManagerBackend.cpp:159
#26 0x00007f860b384eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x55e6d8c1e4f0, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462
#27 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4372
#28 0x00007f85f68881ea in NetworkManager::DevicePrivate::propertiesChanged (this=0x55e6d8c7fdb0, properties=...) at /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/src/device.cpp:649
#29 0x00007f85f688a110 in NetworkManager::DevicePrivate::qt_static_metacall (_o=0x55e6d8c7fdb0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fff2b219468) at /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/redhat-linux-build/src/KF6NetworkManagerQt_autogen/include/moc_device_p.cpp:87
#30 NetworkManager::DevicePrivate::qt_metacall (this=0x55e6d8c7fdb0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fff2b219468) at /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/redhat-linux-build/src/KF6NetworkManagerQt_autogen/include/moc_device_p.cpp:116
#31 0x00007f85f68dcb5e in NetworkManager::WirelessDevicePrivate::qt_metacall (this=0x55e6d8c7fdb0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff2b219468) at /usr/src/debug/kf6-networkmanager-qt-6.28.0-1.fc44.x86_64/redhat-linux-build/src/KF6NetworkManagerQt_autogen/include/moc_wirelessdevice_p.cpp:128
#32 0x00007f860bb64772 in QDBusConnectionPrivate::deliverCall (this=0x7f85f00080e0, object=0x55e6d8c7fdb0, msg=..., metaTypes=..., slotIdx=5) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/dbus/qdbusintegrator.cpp:1009
#33 0x00007f860b3807de in QObject::event (this=<optimized out>, e=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:1479
#34 0x00007f860b30f758 in doNotify (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp:1215
#35 QCoreApplication::notify (this=<optimized out>, receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp:1198
#36 QCoreApplication::notifyInternal2 (receiver=0x55e6d8c7fdb0, event=0x7f85f00562b0) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp:1114
#37 0x00007f860b30f7fd in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp:1559
#38 0x00007f860b313c09 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55e6d8b6a500) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp:1914
#39 0x00007f860b66a57f in postEventSourceDispatch (s=0x55e6d8b6c150) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:248
#40 0x00007f8609ae1f24 in g_main_dispatch (context=0x55e6d8b6bf30) at ../glib/gmain.c:3591
#41 g_main_context_dispatch_unlocked (context=0x55e6d8b6bf30) at ../glib/gmain.c:4451
#42 0x00007f8609ae6038 in g_main_context_iterate_unlocked (context=context@entry=0x55e6d8b6bf30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4516
#43 0x00007f8609ae61e3 in g_main_context_iteration (context=0x55e6d8b6bf30, may_block=1) at ../glib/gmain.c:4582
#44 0x00007f860b669a9d in QEventDispatcherGlib::processEvents (this=0x55e6d8b6bed0, flags=...) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:402
#45 0x00007f860b31d57b in QEventLoop::exec (this=this@entry=0x7fff2b219a60, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/global/qflags.h:78
#46 0x00007f860b318992 in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qcoreapplication.cpp:1457
#47 0x000055e6b69cdfe7 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/ksystemstats-6.7.2-1.fc44.x86_64/src/main.cpp:39

Reported using DrKonqi
This report was filed against 'kde' because the product 'ksystemstats' could not be located in Bugzilla. Add it to drkonqi's mappings file!
Comment 1 Bug Janitor Service 2026-07-27 16:00:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/481
Comment 2 TraceyC 2026-07-29 16:12:36 UTC
This has over 550 events in Sentry, raising priority
Comment 3 Méven 2026-07-30 14:06:59 UTC
Git commit e72f83052f8a8191239831125c75bd0e59d004c8 by Méven Car.
Committed on 27/07/2026 at 17:43.
Pushed by ngraham into branch 'master'.

systemstats: don't keep dangling SensorObject pointers in SensorContainer

A SensorObject was only removed from its SensorContainer when it emitted
aboutToBeRemoved; the destructor did neither that nor any deregistration. An
object deleted by any other route (directly, or by its QObject parent) therefore
left a dangling raw pointer in the container. When another object was later added,
objectAdded triggered AggregateSensor::updateSensors(), which iterates objects()
and calls id() on each, dereferencing the freed object and crashing in the
QString copy.

Connect each object's QObject::destroyed to drop it from the container, comparing
by identity so re-adding an object with the same id is unaffected. Also register
objects with the object itself as the queued-call context, so an object destroyed
before its queued addObject() runs no longer calls addObject() on a dangling
pointer.

M  +1    -0    autotests/CMakeLists.txt
A  +85   -0    autotests/sensorcontainertest.cpp     [License: LGPL(v2.0+)]
M  +6    -0    systemstats/SensorContainer.cpp
M  +1    -1    systemstats/SensorObject.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/e72f83052f8a8191239831125c75bd0e59d004c8
Comment 4 Nate Graham 2026-07-30 14:18:21 UTC
Git commit 414335eb82366a7c242ef06257fb00e9b631a2da by Nate Graham.
Committed on 30/07/2026 at 14:09.
Pushed by ngraham into branch 'Plasma/6.7'.

systemstats: don't keep dangling SensorObject pointers in SensorContainer

A SensorObject was only removed from its SensorContainer when it emitted
aboutToBeRemoved; the destructor did neither that nor any deregistration. An
object deleted by any other route (directly, or by its QObject parent) therefore
left a dangling raw pointer in the container. When another object was later added,
objectAdded triggered AggregateSensor::updateSensors(), which iterates objects()
and calls id() on each, dereferencing the freed object and crashing in the
QString copy.

Connect each object's QObject::destroyed to drop it from the container, comparing
by identity so re-adding an object with the same id is unaffected. Also register
objects with the object itself as the queued-call context, so an object destroyed
before its queued addObject() runs no longer calls addObject() on a dangling
pointer.


(cherry picked from commit e72f83052f8a8191239831125c75bd0e59d004c8)

Co-authored-by: Méven Car <meven@kde.org>

M  +1    -0    autotests/CMakeLists.txt
A  +85   -0    autotests/sensorcontainertest.cpp     [License: LGPL(v2.0+)]
M  +6    -0    systemstats/SensorContainer.cpp
M  +1    -1    systemstats/SensorObject.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/414335eb82366a7c242ef06257fb00e9b631a2da