systemstats: don't keep dangling SensorObject pointers in SensorContainer

A SensorObject was only removed from its SensorContainer when it emitted
aboutToBeRemoved; the destructor did neither that nor any deregistration. An
object deleted by any other route (directly, or by its QObject parent) therefore
left a dangling raw pointer in the container. When another object was later added,
objectAdded triggered AggregateSensor::updateSensors(), which iterates objects()
and calls id() on each, dereferencing the freed object and crashing in the
QString copy.

Connect each object's QObject::destroyed to drop it from the container, comparing
by identity so re-adding an object with the same id is unaffected. Also register
objects with the object itself as the queued-call context, so an object destroyed
before its queued addObject() runs no longer calls addObject() on a dangling
pointer.

BUG: 523562


(cherry picked from commit e72f83052f8a8191239831125c75bd0e59d004c8)

Co-authored-by: Méven Car <meven@kde.org>